# AgenticAIResearchTeam

./: .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: app_description.md
src/generic_consultant_crew/: __init__.py  crew.py  main.py  security_guard.py
src/generic_consultant_crew/config/: agents.yaml  tasks.yaml
src/generic_consultant_crew/tools/: docs_tools.py
web_ui/: app.py  requirements.txt
web_ui/static/: app.js  style.css
web_ui/templates/: index.html  report_template.html
